# StarExecSYNTCOMP

./: README.md
AbsSynthe/: starexec_build  starexec_description.txt
AbsSynthe/source/: Makefile
LTL-type-processor/: process
TLSF/: sample.tlsf
TLSF/ltlf-post-processor/: ltlf_check.py  ltlf_fun.py  process  process.sh  vm_build.sh  vm_build_spot.sh  vm_package.sh
TLSF/ltlf-post-processor/generate/ltlfcheck/: CMakeLists.txt
TLSF/ltlf-post-processor/generate/ltlfcheck/description/: main.tex  mybib.bib
TLSF/ltlf-post-processor/generate/ltlfcheck/src/: ltlf_modelcheck.cpp  ltlf_modelcheck.h  ltlfcheck.cpp  sym_aut.cc  sym_aut.h  utils.cpp  utils.h
TLSF/real-post-processor/: process
TLSF/synt-post-processor/: meyerphi-syfco  process
TLSF/type-processor/: print_metadata.py
aiger-binaries/: README.md  aigtoaig
combine-aiger-binary/: README.md  combine-aiger
demiurge/: starexec_description.txt
eAAG-type-processor/: process  syntax_check.py
eAAG/real-post-processor/: process  synt_verify.sh
eAAG/synt-post-processor/: process  syntax_check.py
eAAG/type-processor/: print_metadata.py  process
iimc-binary/: README.md
ltlsynt/: README.md  starexec_description.txt
nusmv-binaries/: README.md  ltl2smv
scripts/: inforeal.py  inforeal_detailed.py  pgamereal.py  pgamesynth.py  pgamesynth2.py  syntcomp23.md  syntcomp24.md  tlsfreal.py  tlsfsynth.py  tlsfsynth2.py  tlsfsynth_newref.py  updTlsfTags.py  utils.py
simpleBDDSolver/: starexec_description.txt
syfco-binary/: README.md  README.txt  vm_build.sh
v3-binary/: README.md
(+17 files in other folders)
